<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="account_informations">Account informations</string>
    <string name="action_settings">Settings</string>
    <string name="add_news">Add news</string>
    <string name="add_news_confirmation">You are going to add a news</string>
    <string name="add_patient">Add patient</string>
    <string name="add_patient_confirmation">You are going to add a new patient</string>
    <string name="add_patient_ID">ID patient</string>
    <string name="Address">Address</string>
    <string name="admission">Admission</string>
    <string name="app_name">MedFile</string>
    <string name="birthDay">Birth date</string>
    <string name="birthLocation">Birth location</string>
    <string name="cancel">Cancel</string>
    <string name="causes">Causes</string>
    <string name="City">City</string>
    <string name="confirm">Confirm</string>
    <string name="cps_number">cps number</string>
    <string name="date_at"> at </string>
    <string name="date_value">Date value</string>
    <string name="default_address">Medfile \n1 bis rue Lakanal \n75 000 Paris \nFRANCE</string>
    <string name="default_birthDay">XX/XX/XXX</string>
    <string name="default_birthLocation">XXXX</string>
    <string name="default_causes">Default_causes</string>
    <string name="default_cps_number">default cps number</string>
    <string name="default_date">XX/XX/XXXX</string>
    <string name="default_e_mail">default@default.com</string>
    <string name="default_Location">Default_Location</string>
    <string name="default_login">default login</string>
    <string name="default_patient_info_important">Default health informations</string>
    <string name="default_phone_number">01 23 45 67 89</string>
    <string name="default_user_info_important">default user info important</string>
    <string name="default_value">Default value</string>
    <string name="descPatientPic">Patient Picture</string>
    <string name="descWorkingPic">Working</string>
    <string name="disconnect">Disconnect</string>
    <string name="e_mail">E-mail :&#160;</string>
    <string name="emergency_number">Emergency number 01 23 45 67 89</string>
    <string name="entry_date">Entry date</string>
    <string name="general_info">General informations</string>
    <string name="hello_world">Hello Wolrd!</string>
    <string name="history">History</string>
    <string name="home">News</string>
    <string name="instruction">Please fill all those fields</string>
    <string name="last_name">Last name</string>
    <string name="loading">Loading</string>
    <string name="Location">Location</string>
    <string name="login">login</string>
    <string name="logo">Logo</string>
    <string name="my_account">My account</string>
    <string name="news">News</string>
    <string name="news_content">News content</string>
    <string name="news_title">News title</string>
    <string name="patient_address">Patient address</string>
    <string name="patient_info_admission">Patient information about admission</string>
    <string name="patient_info_important">Health informations</string>
    <string name="patient_list">Patient list</string>
    <string name="patient_name">Patient name</string>
    <string name="patient_navigation">Patient navigation</string>
    <string name="phone_number">Phone number :&#160;</string>
    <string name="profile_picture">Profile picture</string>
    <string name="ressource_author">Author :</string>
    <string name="ressource_date">Date</string>
    <string name="ressource_meta_data">MetaData</string>
    <string name="ressource_observations">Observations</string>
    <string name="ressource_patient">Patient</string>
    <string name="separation_line">Separation line</string>
    <string name="settings">Settings</string>
    <string name="sex">Sex</string>
    <string name="sex_female">Female</string>
    <string name="sex_male">Male</string>
    <string name="shared_info">Shared informations</string>
    <string name="social_security_number">Social security number</string>
    <string name="surname">Surname</string>
    <string name="title_activity_account">My Account</string>
    <string name="title_activity_add_news">Add News</string>
    <string name="title_activity_add_patient">Add Patients</string>
    <string name="title_activity_data_image">Data Image</string>
    <string name="title_activity_news">Title activity news</string>
    <string name="title_activity_patient">Patient Page</string>
    <string name="title_activity_reportory">Patient List</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_to_refactor">ToRefactorActivity</string>
    <string name="update">Update</string>
    <string name="user_address">User address</string>
    <string name="user_info_important">User info important</string>
    <string name="user_name">User name</string>
    <string name="working">Under construction&#8230;</string>
    <string name="ZIP_Code">ZIP Code</string>

</resources>