<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_go_home"
        android:showAsAction="ifRoom"
        android:title="@string/home"/>
    <item
        android:id="@+id/action_go_account"
        android:showAsAction="ifRoom"
        android:title="@string/my_account"/>
    <item
        android:id="@+id/action_go_repertory"
        android:showAsAction="ifRoom"
        android:title="@string/patient_list"/>
 <!--    <item
        android:id="@+id/action_go_settings"
        android:showAsAction="ifRoom"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_update"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/update"/> -->
    <item 
        android:id="@+id/action_add_patient"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/add_patient"/>
    <item 
        android:id="@+id/action_add_news"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/add_news"/>
    <item
        android:id="@+id/action_disconnect"
        android:showAsAction="never"
        android:title="@string/disconnect"/>

</menu>