<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <TextView
	    android:text="@string/patient_info_admission"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textStyle="bold"
	    android:textSize="@dimen/xsmall_font_size"/>
   	
 	<LinearLayout 
        android:layout_width="fill_parent"
      	android:layout_height="wrap_content"
        android:orientation="horizontal">
 		
 		<TextView
		    android:text="@string/entry_date"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:textStyle="bold"
		    android:textSize="@dimen/xsmall_font_size"/>
	   	<TextView
		    android:id="@+id/patient_entry_date"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"				    
		    android:text="@string/default_date"
		    android:textSize="@dimen/xsmall_font_size"/>
	</LinearLayout>
   	
   	<LinearLayout 
        android:layout_width="fill_parent"
      	android:layout_height="wrap_content"
        android:orientation="horizontal">
   	    
   	    <TextView
		    android:text="@string/causes"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:textStyle="bold"
		    android:textSize="@dimen/xsmall_font_size"
		    android:gravity="center_vertical"/>
	   	<TextView
		    android:id="@+id/patient_admission_causes"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:text="@string/default_causes"
		    android:textSize="@dimen/xsmall_font_size"/>
   	</LinearLayout>
   	
   	<LinearLayout 
        android:layout_width="fill_parent"
      	android:layout_height="wrap_content"
        android:orientation="horizontal">
   	    <TextView
		    android:text="@string/Location"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:textSize="@dimen/xsmall_font_size"
		    android:textStyle="bold" />
	   	<TextView
		    android:id="@+id/patient_location"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:text="@string/default_Location"
		    android:textSize="@dimen/xsmall_font_size"/>
   	</LinearLayout>
</LinearLayout>
