<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
   	<TextView
       android:id="@+id/patient_name"
       android:text="@string/default_value"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:textSize="@dimen/small_font_size" />

	<LinearLayout 
    	android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="2"
	    android:orientation="vertical"
	    android:gravity="center_horizontal">
	    
	    <TextView
	        android:id="@+id/news_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/news_title"
	        android:textStyle="bold"
	    	android:gravity="center"
       		android:textSize="@dimen/normal_font_size" />
	    
	   <TextView
	     	android:id="@+id/news_content"
	     	android:layout_width="fill_parent"
	      	android:layout_height="wrap_content"
	    	android:gravity="center" 
	    	android:layout_marginTop="@dimen/activity_margin_top"
			android:textSize="@dimen/small_font_size" 
	       	android:text="@string/news_content" />
	</LinearLayout>
</LinearLayout>
